--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,10 @@ spring.mail.port: 587
 spring.mail.properties.mail.smtp.auth: true
 spring.mail.properties.mail.smtp.starttls.required: true
 spring.mail.properties.mail.smtp.starttls.enable: true
-spring.mail.username: mailsenderalgo@gmail.com
+spring.mail.username: genplcautomatizacion@gmail.com
 spring.mail.password: zrmxybqwioowfbws
 spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto: update
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 spring.thymeleaf.cache: false
+
